Fixed video cards overlapping

--- a/pixelflix-app/src/components/Navbar/Navbar.scss
+++ b/pixelflix-app/src/components/Navbar/Navbar.scss
@@ -34,6 +34,7 @@
     &__section {
         position: fixed;
         bottom: 0;
+        z-index: 1;
 
         @include tablet {
             top: 0;
