--- a/pixelflix-app/src/components/Searchbar/Searchbar.scss
+++ b/pixelflix-app/src/components/Searchbar/Searchbar.scss
@@ -70,6 +70,7 @@
         height: 4rem;
         background-color: $color-primary-dark;
         padding: 1rem;
+        z-index: 1;
 
         @include tablet {
             top: 6rem;
